tests/bad/methods_redef.ae
/// fail: Method is already defined in struct

struct Foo {}
def Foo::bar(this) {}
def Foo::bar(this) {}